[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"  
solana-client = "2.3.2"
solana-sdk = "2.3.1"
base64 = "0.22.1"
