[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"  
solana-sdk = "2.3.1"
spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"
base64 = "0.22"
bs58 = "0.5.0"
tower-http = { version = "0.6.6", features = ["cors"] }
solana-program = "2.3.0"